--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "git-commit-msg-linter": "^4.5.0"
+    "@types/node": "^18.11.18",
+    "git-commit-msg-linter": "^4.5.0",
+    "typescript": "^4.9.5"
   }
 }
