--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "outDir": "./dist",
-        "module": "commomjs",
+        "module": "CommonJS",
         "target": "es2019",
         "esModuleInterop": true,
         "allowJs": true
