--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.11.18",
     "@typescript-eslint/eslint-plugin": "^5.50.0",
     "eslint": "^8.33.0",
@@ -23,7 +24,9 @@
     "eslint-plugin-promise": "^6.1.1",
     "git-commit-msg-linter": "^4.5.0",
     "husky": "^8.0.3",
+    "jest": "^29.4.1",
     "lint-staged": "^13.1.0",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   }
 }
