--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
   },
   "rules": {
     "@typescript-eslint/strict-boolean-expressions": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/consistent-type-definitions": "off",
     "@typescript-eslint/comma-spacing": "off",
     "@typescript-eslint/return-await": "off",
