--- a/package.json
+++ b/package.json
@@ -1,34 +1,85 @@
 {
   "name": "clean-node-api",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "3.0.0",
+  "description": "NodeJs Rest API and GraphQL using TDD, Clean Architecture, Typescript and Design Patterns",
+  "author": "Rodrigo Manguinho",
+  "license": "GPL-3.0-or-later",
+  "repository": "github:rmanguinho/clean-ts-api",
+  "homepage": "https://rmanguinho.github.io",
   "scripts": {
-    "test": "jest --passWithNoTests --watch",
-    "test:staged": "jest --passWithNoTests"
+    "start": "node dist/main/server.js",
+    "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
+    "build": "rimraf dist && tsc -p tsconfig-build.json",
+    "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
+    "postbuild": "copyfiles -u 1 public/**/* dist/static",
+    "up": "npm run build && docker-compose up -d",
+    "down": "docker-compose down",
+    "check": "npm-check -s -u",
+    "test": "jest --passWithNoTests --runInBand --no-cache",
+    "test:unit": "npm test -- --watch -c jest-unit-config.js",
+    "test:integration": "npm test -- --watch -c jest-integration-config.js",
+    "test:staged": "npm test -- --findRelatedTests",
+    "test:ci": "npm test -- --coverage",
+    "test:coveralls": "npm run test:ci && coveralls < coverage/lcov.info",
+    "prepare": "husky install"
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com-personal:zehenrique0822/clean-node-api.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^29.4.0",
-    "@types/node": "^18.11.18",
-    "@typescript-eslint/eslint-plugin": "^5.50.0",
-    "eslint": "^8.33.0",
-    "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-n": "^15.6.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "git-commit-msg-linter": "^4.5.0",
-    "husky": "^8.0.3",
-    "jest": "^29.4.1",
-    "lint-staged": "^13.1.0",
-    "ts-jest": "^29.0.5",
+    "@shelf/jest-mongodb": "^2.0.3",
+    "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.13",
+    "@types/express-serve-static-core": "^4.17.24",
+    "@types/faker": "^5.5.8",
+    "@types/graphql": "^14.5.0",
+    "@types/graphql-iso-date": "^3.4.0",
+    "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/mongodb": "^4.0.7",
+    "@types/node": "^16.9.1",
+    "@types/supertest": "^2.0.11",
+    "@types/swagger-ui-express": "^4.1.3",
+    "@types/validator": "^13.6.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "bson-objectid": "^2.0.1",
+    "copyfiles": "^2.4.1",
+    "coveralls": "^3.1.1",
+    "eslint": "^7.32.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "faker": "^5.5.3",
+    "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.2",
+    "jest": "^27.2.0",
+    "lint-staged": "^11.1.2",
+    "mockdate": "^3.0.5",
+    "rimraf": "^3.0.2",
+    "supertest": "^6.1.6",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@graphql-tools/schema": "^8.2.0",
+    "@graphql-tools/utils": "^8.2.2",
+    "apollo-server-express": "^3.3.0",
+    "bcrypt": "^5.0.1",
+    "express": "^4.17.1",
+    "graphql": "^15.5.3",
+    "graphql-scalars": "^1.10.1",
+    "jsonwebtoken": "^8.5.1",
+    "module-alias": "^2.2.2",
+    "mongo-round": "^1.0.0",
+    "mongodb": "^4.1.1",
+    "nodemon": "^2.0.12",
+    "swagger-ui-express": "^4.1.6",
+    "validator": "^13.6.0"
+  },
+  "engines": {
+    "node": "16.x"
+  },
+  "_moduleAliases": {
+    "@": "dist"
   }
 }
