--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "repository": "github:rmanguinho/clean-ts-api",
   "homepage": "https://rmanguinho.github.io",
   "scripts": {
-    "start": "node dist/main/server.js",
+    "start": "sucrase-node src/main/server.ts",
     "debug": "nodemon -L --watch ./dist --inspect=0.0.0.0:9222 --nolazy ./dist/main/server.js",
     "build": "rimraf dist && tsc -p tsconfig-build.json",
     "build:watch": "rimraf dist && tsc -p tsconfig-build.json -w",
@@ -27,7 +27,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.2.0",
     "@types/bcrypt": "^5.0.0",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.21",
     "@types/express-serve-static-core": "^4.17.24",
     "@types/faker": "^5.5.8",
     "@types/graphql": "^14.5.0",
@@ -56,6 +56,7 @@
     "lint-staged": "^11.1.2",
     "mockdate": "^3.0.5",
     "rimraf": "^3.0.2",
+    "sucrase": "^3.34.0",
     "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.9.1",
@@ -66,7 +67,7 @@
     "@graphql-tools/utils": "^8.2.2",
     "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.1.0",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
     "graphql": "^15.5.3",
     "graphql-scalars": "^1.10.1",
     "jsonwebtoken": "^8.5.1",
