--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "apollo-server-express": "^3.3.0",
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
+    "fast-glob": "^3.3.2",
     "graphql": "^15.5.3",
     "graphql-scalars": "^1.10.1",
     "jsonwebtoken": "^8.5.1",
